--- a/javascript-browser/src/streaming.html
+++ b/javascript-browser/src/streaming.html
@@ -255,8 +255,11 @@
             mimeType: 'audio/wav',
             recorderType: RecordRTC.StereoAudioRecorder,
             timeSlice: 1000,
-            ondataavailable(blob) {
-              socket?.send(blob);
+            async ondataavailable(blob) {
+              const buffer = await blob.arrayBuffer();
+              // Remove WAV header
+              const modifiedBuffer = buffer.slice(44);
+              socket?.send(modifiedBuffer);
             },
             sampleRate: SAMPLE_RATE,
             desiredSampRate: SAMPLE_RATE,
