--- a/javascript-browser/src/V1_LEGACY/streaming.html
+++ b/javascript-browser/src/V1_LEGACY/streaming.html
@@ -143,24 +143,6 @@
       }
       listAudioDevices();
 
-      async function initiateSession(gladiaKey) {
-        const response = await fetch(`https://api.gladia.io/v2/live`, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            "X-GLADIA-KEY": gladiaKey,
-          },
-          body: JSON.stringify({
-            sample_rate: SAMPLE_RATE,
-          }),
-        })
-        if (!response.ok) {
-          const message = `${response.status}: ${(await response.text()) || response.statusText}`
-          throw new Error(message)
-        }
-        return await response.json()
-      }
-
       /** @type {HTMLFormElement} */
       const form = document.querySelector('#form');
       /** @type {HTMLButtonElement} */
@@ -218,14 +200,21 @@
         };
 
         try {
-          const {url} = await initiateSession(gladiaKey)
-
           const socketPromise = deferredPromise();
 
           // Initializes the websocket
-          socket = new WebSocket(url);
+          socket = new WebSocket(
+            'wss://api.gladia.io/audio/text/audio-transcription'
+          );
           socket.onopen = () => {
-            socketPromise.resolve(true);
+            // Check https://docs.gladia.io/api-reference/live-flow for more information about the parameters
+            const configuration = {
+              x_gladia_key: gladiaKey,
+              frames_format: 'bytes',
+              language_behaviour: 'automatic single language',
+              sample_rate: SAMPLE_RATE
+            };
+            socket.send(JSON.stringify(configuration));
           };
           socket.onerror = () => {
             socketPromise.reject(new Error(`Couldn't connect to the server`));
@@ -236,6 +225,24 @@
                 `Server refuses the connection: [${event.code}] ${event.reason}`
               )
             );
+          };
+          socket.onmessage = (event) => {
+            let data;
+            try {
+              data = JSON.parse(event.data);
+            } catch (err) {
+              socketPromise.reject(
+                new Error(`Cannot parse the message: ${event.data}`)
+              );
+            }
+
+            if (data?.event === 'connected') {
+              socketPromise.resolve(true);
+            } else {
+              socketPromise.reject(
+                new Error(`Server sent an unexpected message: ${event.data}`)
+              );
+            }
           };
 
           // Get the input stream
@@ -280,14 +287,14 @@
           stop();
         };
         socket.onmessage = (event) => {
-          const message = JSON.parse(event.data);
-          console.log(message);
-          if (message?.type === 'transcript') {
-            if (message.data.is_final) {
-              finalsContainer.textContent += message.data.utterance.text;
+          const data = JSON.parse(event.data);
+          console.log(data);
+          if (data?.event === 'transcript' && data.transcription) {
+            if (data.type === 'final') {
+              finalsContainer.textContent += data.transcription;
               partialsContainer.textContent = '';
             } else {
-              partialsContainer.textContent = message.data.utterance.text;
+              partialsContainer.textContent = data.transcription;
             }
           }
         };
