feat: add streaming file sample from browser

--- a/javascript-browser/src/live-from-microphone.html
+++ b/javascript-browser/src/live-from-microphone.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Gladia - Streaming</title>
+    <title>Gladia - Live from microphone</title>
 
     <!-- We are using a 3rd party library to record audio as WAV on every browser. -->
     <!-- Each browser uses its own audio encoding and some of them are not compatible. -->
