--- a/javascript-browser/src/pre-recorded.html
+++ b/javascript-browser/src/pre-recorded.html
@@ -62,12 +62,11 @@
         />
       </div>
       <div>
-        <label for="audio_url">or upload your own audio or video file</label>
+        <label for="audio">or upload your own audio or video file</label>
         <input
           id="audio"
           name="audio"
           type="file"
-          value="http://files.gladia.io/example/audio-transcription/split_infinity.wav"
         />
       </div>
       <button type="submit">Submit</button>
