feat: add enhancer to subtitles-with-chromakey.html

--- a/integrations-examples/OBS/subtitles-with-chromakey.html
+++ b/integrations-examples/OBS/subtitles-with-chromakey.html
@@ -138,7 +138,7 @@
         const endpointing = queryParams.get("endpointing") ?? "200";
         const model = queryParams.get("model") ?? "accurate";
         const vocab = queryParams.get("vocab") ?? "";
-
+        const audio_enhancer = queryParams.get("audio_enhancer") !== "false";
 
         let transcription_hint = "";
         if (vocab !== "") {
@@ -182,7 +182,8 @@
               sample_rate: SAMPLE_RATE,
               model_type: model,
               endpointing: parseInt(endpointing, 10),
-              ...(vocab ? { transcription_hint: transcription_hint } : {})
+              ...(vocab ? { transcription_hint: transcription_hint } : {}),
+              audio_enhancer: audio_enhancer
             },
             {
               async onTranscript(transcription) {
