--- a/integrations-examples/OBS/subtitles-with-chromakey.html
+++ b/integrations-examples/OBS/subtitles-with-chromakey.html
@@ -206,6 +206,7 @@
                     "Thanks'",
                     "thank you for watching",
                     "Let's get going.",
+		    "Sous-titrage Société Radio"
                   ].includes(transcription.transcription)
                 ) {
                   return;
