--- a/integrations-examples/OBS/subtitles-with-chromakey.html
+++ b/integrations-examples/OBS/subtitles-with-chromakey.html
@@ -138,7 +138,7 @@
         const endpointing = queryParams.get("endpointing") ?? "200";
         const model = queryParams.get("model") ?? "accurate";
         const vocab = queryParams.get("vocab") ?? "";
-        const audio_enhancer = queryParams.get("audio_enhancer") !== "false";
+        const audio_enhancer = queryParams.get("audio_enhancer") === null ? true : queryParams.get("audio_enhancer") !== "false";
 
         let transcription_hint = "";
         if (vocab !== "") {
@@ -206,7 +206,6 @@
                     "Thanks'",
                     "thank you for watching",
                     "Let's get going.",
-		    "Sous-titrage Société Radio"
                   ].includes(transcription.transcription)
                 ) {
                   return;
