feat: subtitles-with-chromakey.html

--- a/integrations-examples/OBS/subtitles-with-chromakey.html
+++ b/integrations-examples/OBS/subtitles-with-chromakey.html
@@ -125,7 +125,13 @@
         const gladiaKey = queryParams.get("token");
         if (!gladiaKey) {
           window.alert(
-            'Append your API token to query param "token": "?token=aaaa-bbbb-cccc-dddd".\nYou can get one for free at https://app.gladia.io/\nYou can add a source language with "source_language" and a target language with "target_language".\nto perform a realtime translation.\nthe url should look like subtitles.gladia.io/?token=aaaa-bbbb-cccc-dddd&source_language=french&target_language=english\nfor example to translate from french to english.'
+            'Append your API token to query param "token": "?token=aaaa-bbbb-cccc-dddd".\n' +
+            'You can get one for free at https://app.gladia.io/\n' +
+            'You can add a source language with "source_language" and a target language with "target_language".\n' +
+            'To perform a realtime translation.\n' +
+            'You can disable audio enhancement with "audio_enhancer=false" (enabled by default).\n' +
+            'The url should look like subtitles.gladia.io/?token=aaaa-bbbb-cccc-dddd&source_language=french&target_language=english\n' +
+            'For example to translate from french to english.'
           );
           return;
         }
