--- a/javascript-browser/src/index.html
+++ b/javascript-browser/src/index.html
@@ -4,6 +4,9 @@
     <a href="pre-recorded.html">Pre-recorded sample</a>
   </li>
   <li>
-    <a href="streaming.html">Live sample</a>
+    <a href="live-from-file.html">Live sample (file)</a>
+  </li>
+  <li>
+    <a href="live-from-microphone.html">Live sample (microphone)</a>
   </li>
 </ul>
